Revert inline-block and remove white-space nowrap to fix line wrapping issue

--- a/styles.css
+++ b/styles.css
@@ -321,8 +321,7 @@ header h1 {
 }
 
 .output-area .blank-button-wrapper {
-    white-space: normal;
-    display: inline-block;
+    display: inline;
     vertical-align: baseline;
 }
 
@@ -370,8 +369,6 @@ header h1 {
     line-height: 1.8;
     vertical-align: baseline;
     display: inline;
-    white-space: nowrap;
-    position: relative;
 }
 
 .blank-button * {
